docs/spec/grammar.ebnf
(* Ono-Sendai concrete grammar.
 *
 * Authority: this file is the machine-readable form of the grammar decided in ADR-0009, which
 * resolves the sketch of spec section 26 and the command/expression ambiguity of section 26.1.
 * The narrative specification stays immutable; this file is where the grammar is fixed.
 *
 * Two argument modes decide how a stage's arguments are read. The mode is a syntactic property
 * of the head word, known before any registry is loaded, so the editor can parse a line as it
 * is typed:
 *
 *   Words mode       every head not listed as expression-mode: external commands, native
 *                    verb-target commands, and `to` / `from` / `format`.
 *                    `<` `>` `>>` are redirections; bare words are word atoms.
 *
 *   Expression mode  where select sort group take skip each reduce count measure join diff
 *                    if elif while until let return match
 *                    `<` `>` are comparisons; bare identifiers are field paths; no redirection.
 *)

program        = { statement } ;
statement      = ( pipeline | let_stmt | fn_decl | control_stmt | use_stmt ) [ terminator ] ;
terminator     = ";" | NEWLINE ;

(* --- pipelines ------------------------------------------------------------------------- *)

pipeline       = and_or [ "&" ] ;                  (* trailing & detaches into a job, 18.4 *)
and_or         = stage_list { ( "&&" | "||" ) stage_list } ;   (* chains on exit status *)
stage_list     = stage { "|" stage } ;
stage          = head { argument } { redirection } ;
head           = qualified_name | variable | paren_value ;
qualified_name = [ namespace ":" ] name ;          (* ono:get, exec:ls -- section 6.5 *)
namespace      = "ono" | "exec" | IDENT ;
name           = WORD ;

(* --- arguments ------------------------------------------------------------------------- *)

argument       = words_argument | expression ;     (* which one, per the head's mode *)

words_argument = long_option
               | WORD                              (* ./src  --recursive  -la  *.tmp  1.2.3 *)
               | string
               | number
               | variable
               | current_value
               | paren_value
               | list
               | record
               | block ;

long_option    = "--" IDENT [ "=" ( expression | WORD | string ) ] ;

(* --- redirection (words mode only) ------------------------------------------------------ *)

redirection    = [ FD ] ( ">" | ">>" | "<" ) redirect_target
               | FD ( ">&" | "<&" ) FD ;
redirect_target = WORD | string | variable ;
FD             = DIGIT { DIGIT } ;                 (* no space before the operator: 2> *)

(* --- expressions ------------------------------------------------------------------------ *)

expression     = logical_or ;
logical_or     = logical_and { "or" logical_and } ;
logical_and    = equality { "and" equality } ;
equality       = comparison { ( "==" | "!=" ) comparison } ;
comparison     = membership { ( "<" | "<=" | ">" | ">=" ) membership } ;
membership     = additive { ( "in" | "not" "in" | "~=" | "!~=" ) additive } ;
additive       = multiplicative { ( "+" | "-" ) multiplicative } ;
multiplicative = unary { ( "*" | "/" | "%" ) unary } ;
unary          = ( "not" | "-" ) unary | postfix ;
postfix        = primary { "." IDENT | "?." IDENT | "[" expression "]" | call_args } ;
call_args      = "(" [ expression { "," expression } ] ")" ;

primary        = literal
               | variable
               | current_value
               | field_path
               | list
               | record
               | block
               | paren_value ;

paren_value    = "(" ( pipeline | expression ) ")" ;   (* value of a nested pipeline *)
field_path     = IDENT ;                               (* postfix supplies .field steps *)
variable       = "$" IDENT ;                           (* $env.PATH via postfix *)
current_value  = "@" | "@" [ "-" ] DIGIT { DIGIT } ;   (* @, @-1, @3 -- section 6.4 *)

list           = "[" [ expression { "," expression } [ "," ] ] "]" ;
record         = "{" [ field { "," field } [ "," ] ] "}" ;   (* IDENT ":" lookahead *)
field          = ( IDENT | string ) ":" expression ;
block          = "{" { statement } "}" ;

(* --- literals ---------------------------------------------------------------------------- *)

literal        = number | string | regex | address | "true" | "false" | "null" ;
number         = int | float | bytesize | duration | percent ;
int            = DEC | "0x" HEX { HEX } | "0b" BIN { BIN } ;
float          = DEC "." DEC [ ( "e" | "E" ) [ "+" | "-" ] DEC ] ;
bytesize       = ( int | float ) byte_unit ;       (* adjacent, no space: 512MiB *)
byte_unit      = "B" | "KiB" | "MiB" | "GiB" | "TiB" | "PiB"
               | "KB" | "MB" | "GB" | "TB" | "PB" ;
duration       = ( int | float ) time_unit ;
time_unit      = "ns" | "us" | "ms" | "s" | "m" | "h" | "d" | "w" ;
percent        = ( int | float ) "%" ;
string         = '"' { char | escape | interpolation } '"'
               | "'" { raw_char } "'" ;
interpolation  = "$" IDENT { "." IDENT } | "$(" pipeline ")" ;
escape         = "\\" ( "\\" | '"' | "'" | "$" | "n" | "r" | "t" | "0" | "e"
                      | "x" HEX HEX | "u{" HEX { HEX } "}" ) ;
regex          = "/" { regex_char } "/" { "i" | "m" | "s" | "x" } ;

(* An IP address is a value of its own (spec section 10.2), recognised only where an operand is
 * expected: `127.0.0.1` is an address in `where local.address == 127.0.0.1` and a filename in
 * `cat 127.0.0.1`. IPv4 needs four dotted groups, so `1.2` and `1.2.3` stay numbers and field
 * paths; IPv6 needs `::` or two separators, so `ono:get` is never mistaken for one. A zone
 * identifier is part of the address, because an address without its zone is a different address.
 *)
address        = ipv4 | ipv6 ;
ipv4           = DEC "." DEC "." DEC "." DEC ;
ipv6           = { HEX | ":" | "." } [ "%" IDENT ] ;

(* --- statements -------------------------------------------------------------------------- *)

let_stmt       = "let" IDENT [ ":" type ] "=" pipeline ;
fn_decl        = "fn" IDENT "(" [ params ] ")" [ "->" type ] block ;
params         = param { "," param } ;
param          = IDENT [ ":" type ] [ "=" expression ] ;
type           = IDENT [ "<" type { "," type } ">" ] [ "?" ] ;

control_stmt   = if_stmt | for_stmt | while_stmt | match_stmt | try_stmt | jump_stmt ;
if_stmt        = "if" expression block { "else" "if" expression block } [ "else" block ] ;
for_stmt       = "for" IDENT "in" expression block ;
while_stmt     = "while" expression block ;
match_stmt     = "match" expression "{" { match_arm } "}" ;
match_arm      = pattern "=>" ( block | expression ) [ "," ] ;
pattern        = literal | IDENT | "_" | type ;
try_stmt       = "try" block [ "catch" [ IDENT ] block ] ;
jump_stmt      = "return" [ expression ] | "break" | "continue" ;
use_stmt       = "use" qualified_name ;

(* --- lexical --------------------------------------------------------------------------- *)

(* WORD  the maximal run of characters that are none of: whitespace, | ( ) [ ] { } ; , ' "
 *       and, in words mode, < > ; and that does not begin a comment.
 *       A backslash carries the next character into the word, whitespace and structural
 *       characters included, so `My\ Documents` and `a\|b` are each one word (ADR-0019). The
 *       escape stays in the token text; removing it is the evaluator's job, because an external
 *       command must be able to receive exactly what was typed.
 * IDENT a WORD matching [A-Za-z_][A-Za-z0-9_-]* that is not a keyword.
 * COMMENT  "#" to end of line, when "#" begins a token. Not a grammar production.
 *)
