crates/ono-parser/src/parser.rs
//! The recoverable recursive-descent parser of ADR-0009.
//!
//! The parser never fails and never panics: it always returns a tree, collecting problems as
//! diagnostics instead of throwing them. Every construct has a recovery point — the end of a
//! stage at `|`, the end of a statement at a newline or `;`, the closing delimiter of a
//! bracketed form — so a half-typed line still produces something the editor can highlight.

use ono_core::Span;

use crate::ast::{
    AliasStmt, ArgMode, Argument, BinaryExpr, BinaryOp, Block, CallExpr, CatchClause, ChainOp,
    ChainedList, CurrentSelector, CurrentValue, Expr, FieldAccess, FieldPath, FnDecl, ForStmt,
    IfBranch, IfStmt, IndexExpr, LetStmt, ListExpr, MatchArm, MatchArmBody, MatchStmt, NumberLit,
    NumberValue, OptionArg, Param, ParenInner, ParenValue, Pattern, Pipeline, Program,
    QualifiedName, RecordExpr, RecordField, RecordKey, RedirectOp, RedirectTarget, Redirection,
    RegexLit, ReturnStmt, Stage, StageHead, StageList, Statement, StrLit, StrPart, TimestampLit,
    TryStmt, TypeRef, UnaryExpr, UnaryOp, UnitLit, UseStmt, Variable, WhileStmt, WordArg,
};
use crate::diagnostic::Diagnostic;
use crate::lexer::{LexMode, Token, TokenKind, is_ident_continue, is_ident_start, next_token};

/// How deeply constructs may nest before the parser stops descending.
///
/// Adversarial input is a given for a shell (spec §35.6); the limit keeps a line of ten thousand
/// open parentheses a diagnostic rather than a stack overflow.
const MAX_DEPTH: u32 = 96;

/// The result of parsing a source: a tree, plus everything that was wrong with it.
#[derive(Debug, Clone, PartialEq)]
pub struct Parsed {
    program: Program,
    diagnostics: Vec<Diagnostic>,
}

impl Parsed {
    /// The tree. Always present, even for input that was rejected outright.
    #[must_use]
    pub fn program(&self) -> &Program {
        &self.program
    }

    /// Everything the parser found wrong, in source order.
    #[must_use]
    pub fn diagnostics(&self) -> &[Diagnostic] {
        &self.diagnostics
    }

    /// Whether the input ends outside every construct it opened.
    ///
    /// A line that is merely unfinished — an open quote, an open bracket, a trailing `|` — is
    /// not complete but is not wrong either, which is the distinction the editor needs
    /// (ADR-0009).
    #[must_use]
    pub fn is_complete(&self) -> bool {
        !self
            .diagnostics
            .iter()
            .any(crate::diagnostic::Diagnostic::is_incomplete)
    }

    /// Whether the input contains something no amount of further typing can rescue.
    #[must_use]
    pub fn has_errors(&self) -> bool {
        self.diagnostics
            .iter()
            .any(|diagnostic| !diagnostic.is_incomplete())
    }

    /// Takes the tree and the diagnostics apart, for a caller that wants to own both.
    #[must_use]
    pub fn into_parts(self) -> (Program, Vec<Diagnostic>) {
        (self.program, self.diagnostics)
    }
}

/// Parses a source into a tree and a list of diagnostics.
///
/// The call never panics and always returns a tree, whatever it is handed.
///
/// ```
/// let parsed = ono_parser::parse("get process | where cpu > 20");
/// assert!(parsed.diagnostics().is_empty());
/// assert_eq!(parsed.program().statements.len(), 1);
/// ```
#[must_use]
pub fn parse(source: &str) -> Parsed {
    let mut parser = Parser::new(source);
    let program = parser.parse_program();
    Parsed {
        program,
        diagnostics: parser.diagnostics,
    }
}

/// Lexes a source into the tokens the parser actually read, for syntax highlighting.
///
/// Because a token's class depends on the mode its stage is in, the stream is produced by the
/// parser rather than by a standalone lexer: `>` comes back as a redirection in `cat a > b` and
/// as a comparison in `where a > b`. Tokens are ordered, non-overlapping and inside the source.
///
/// ```
/// use ono_parser::TokenKind;
/// let kinds: Vec<TokenKind> = ono_parser::tokens("ls -la").iter().map(|t| t.kind).collect();
/// assert_eq!(kinds, vec![TokenKind::Word, TokenKind::Word]);
/// ```
#[must_use]
pub fn tokens(source: &str) -> Vec<Token> {
    let mut parser = Parser::new(source);
    parser.record = Some(Vec::new());
    let _ = parser.parse_program();
    parser.record.unwrap_or_default()
}

/// The arguments `text` reads as, in words mode.
///
/// A stage's argument mode is fixed at parse time by its head word (ADR-0009), before anything
/// knows whether the head resolves to a native command or to a program of the same name. Where
/// resolution chooses the program, its arguments are the words the user typed — `sort -r
/// /tmp/a` is a flag and a path, not the arithmetic that `-r / tmp / a` also is — and this
/// re-reads exactly that region of the source in the mode the program deserves (ADR-0260).
///
/// The spans of the returned arguments are offsets into `text`, so an option's value expression
/// must be evaluated against `text` and not against the whole line.
///
/// ```
/// use ono_parser::{Argument, words_arguments};
/// let arguments = words_arguments("-r /tmp/a");
/// assert_eq!(arguments.len(), 2);
/// assert!(matches!(&arguments[0], Argument::Word(word) if word.text == "-r"));
/// ```
#[must_use]
pub fn words_arguments(text: &str) -> Vec<Argument> {
    let mut parser = Parser::new(text);
    let mut arguments = Vec::new();
    loop {
        let token = parser.peek(LexMode::Words);
        if ends_stage(token.kind) {
            break;
        }
        let before = parser.pos;
        arguments.push(parser.parse_words_argument(token, None));
        if parser.pos == before {
            parser.bump(LexMode::Words);
        }
    }
    arguments
}

struct Parser<'a> {
    source: &'a str,
    limit: usize,
    pos: u32,
    diagnostics: Vec<Diagnostic>,
    record: Option<Vec<Token>>,
    depth: u32,
    no_brace: bool,
}

impl<'a> Parser<'a> {
    fn new(source: &'a str) -> Self {
        Self {
            source,
            limit: source.len(),
            pos: 0,
            diagnostics: Vec::new(),
            record: None,
            depth: 0,
            no_brace: false,
        }
    }

    fn text(&self) -> &'a str {
        self.source.get(..self.limit).unwrap_or(self.source)
    }

    /// The next significant token, without consuming it. Comments are consumed on sight.
    fn peek(&mut self, mode: LexMode) -> Token {
        loop {
            let token = next_token(self.text(), self.pos, mode);
            if token.kind == TokenKind::Comment {
                self.pos = token.span.end();
                if let Some(record) = &mut self.record {
                    record.push(token);
                }
                continue;
            }
            return token;
        }
    }

    /// The token after `token`, without consuming anything.
    fn peek_after(&self, mode: LexMode, token: Token) -> Token {
        let mut at = token.span.end();
        loop {
            let next = next_token(self.text(), at, mode);
            if next.kind == TokenKind::Comment {
                at = next.span.end();
                continue;
            }
            return next;
        }
    }

    fn bump(&mut self, mode: LexMode) -> Token {
        let token = self.peek(mode);
        if token.kind != TokenKind::Eof {
            self.pos = token.span.end();
            if let Some(record) = &mut self.record {
                record.push(token);
            }
        }
        token
    }

    fn eat(&mut self, mode: LexMode, kind: TokenKind) -> Option<Token> {
        let token = self.peek(mode);
        (token.kind == kind).then(|| self.bump(mode))
    }

    fn at_keyword(&mut self, mode: LexMode, keyword: &str) -> bool {
        let token = self.peek(mode);
        matches!(token.kind, TokenKind::Ident | TokenKind::Word)
            && token.text(self.source) == keyword
    }

    /// Whether more typing at the end of the input could still turn `token` into something valid.
    ///
    /// The end of the input is the one place where a token may be a fragment of a longer one, so
    /// a problem there is reported as unfinished rather than as wrong. A closing delimiter is
    /// the exception: nothing appended after it can rescue it.
    fn is_possibly_unfinished(&self, token: Token) -> bool {
        token.kind == TokenKind::Eof
            || (token.span.end() as usize == self.limit && !token.kind.is_closing_delimiter())
    }

    fn report(&mut self, diagnostic: Diagnostic) {
        self.diagnostics.push(diagnostic);
    }

    /// Reports that `token` was not what the grammar expected here.
    fn report_unexpected(&mut self, token: Token, message: impl Into<String>) {
        let diagnostic = if self.is_possibly_unfinished(token) {
            Diagnostic::incomplete(token.span, message)
        } else {
            Diagnostic::syntax(token.span, message)
        };
        self.report(diagnostic);
    }

    fn describe(&self, token: Token) -> String {
        match token.kind {
            TokenKind::Eof => "the end of the input".to_owned(),
            TokenKind::Newline => "the end of the line".to_owned(),
            _ => format!("`{}`", token.text(self.source)),
        }
    }

    // --- program and statements ---------------------------------------------------------

    fn parse_program(&mut self) -> Program {
        let mut statements = Vec::new();
        loop {
            self.skip_separators();
            if self.peek(LexMode::Words).kind == TokenKind::Eof {
                break;
            }
            let before = self.pos;
            self.parse_statement_into(&mut statements);
            if self.pos == before {
                let token = self.bump(LexMode::Words);
                if token.kind == TokenKind::Eof {
                    break;
                }
            }
        }
        Program {
            statements,
            span: Span::new(0, self.limit as u32),
        }
    }

    fn skip_separators(&mut self) {
        while matches!(
            self.peek(LexMode::Words).kind,
            TokenKind::Newline | TokenKind::Semi
        ) {
            self.bump(LexMode::Words);
        }
    }

    /// Parses one statement and the terminator that follows it.
    fn parse_statement_into(&mut self, statements: &mut Vec<Statement>) {
        let (statement, block_terminated) = self.parse_statement();
        statements.push(statement);
        self.finish_statement(block_terminated);
    }

    fn finish_statement(&mut self, block_terminated: bool) {
        let token = self.peek(LexMode::Words);
        match token.kind {
            TokenKind::Semi | TokenKind::Newline => {
                self.bump(LexMode::Words);
            }
            TokenKind::Eof | TokenKind::RBrace => {}
            _ if block_terminated => {}
            _ => {
                let description = self.describe(token);
                self.report_unexpected(
                    token,
                    format!("expected the end of the statement, found {description}"),
                );
                self.recover_to_statement_end();
            }
        }
    }

    fn recover_to_statement_end(&mut self) {
        loop {
            let token = self.peek(LexMode::Words);
            match token.kind {
                TokenKind::Eof | TokenKind::RBrace => return,
                TokenKind::Semi | TokenKind::Newline => {
                    self.bump(LexMode::Words);
                    return;
                }
                _ => {
                    self.bump(LexMode::Words);
                }
            }
        }
    }

    /// Parses one statement. The flag says whether it ended with a block, in which case no
    /// terminator is required before the next statement.
    fn parse_statement(&mut self) -> (Statement, bool) {
        let token = self.peek(LexMode::Words);
        if token.kind == TokenKind::Word {
            match token.text(self.source) {
                "let" => return (Statement::Let(self.parse_let()), false),
                "fn" => return (Statement::Fn(self.parse_fn()), true),
                "alias" => return (Statement::Alias(self.parse_alias()), false),
                "if" => return (Statement::If(self.parse_if()), true),
                "for" => return (Statement::For(self.parse_for()), true),
                "while" => return (Statement::While(self.parse_while()), true),
                "match" => return (Statement::Match(self.parse_match()), true),
                "try" => return (Statement::Try(self.parse_try()), true),
                "return" => return (Statement::Return(self.parse_return()), false),
                "break" => {
                    let keyword = self.bump(LexMode::Words);
                    return (Statement::Break(keyword.span), false);
                }
                "continue" => {
                    let keyword = self.bump(LexMode::Words);
                    return (Statement::Continue(keyword.span), false);
                }
                "use" => return (Statement::Use(self.parse_use()), false),
                _ => {}
            }
        }
        (Statement::Pipeline(self.parse_pipeline()), false)
    }

    fn parse_let(&mut self) -> LetStmt {
        let keyword = self.bump(LexMode::Words);
        let (name, name_span) = self.expect_ident("a name for the binding");
        let ty = if self.eat(LexMode::Expr, TokenKind::Colon).is_some() {
            Some(self.parse_type())
        } else {
            None
        };
        let assign = self.peek(LexMode::Expr);
        if assign.kind == TokenKind::Eq {
            self.bump(LexMode::Expr);
        } else {
            let description = self.describe(assign);
            self.report_unexpected(assign, format!("expected `=`, found {description}"));
        }
        // `let hot = get process | where …` binds a pipeline; `let n = 3` binds a value. Both are
        // ordinary and the same lookahead that disambiguates `( … )` decides which is which.
        let value = if self.parens_hold_expression(assign) {
            let expression = self.parse_expression();
            expression_as_pipeline(expression)
        } else {
            self.parse_pipeline()
        };
        let span = keyword.span.join(value.span);
        LetStmt {
            name,
            name_span,
            ty,
            value,
            span,
        }
    }

    fn parse_alias(&mut self) -> AliasStmt {
        let keyword = self.bump(LexMode::Words);
        let (name, name_span) = self.expect_ident("a name for the alias");
        let assign = self.peek(LexMode::Expr);
        if assign.kind == TokenKind::Eq {
            self.bump(LexMode::Expr);
        } else {
            let description = self.describe(assign);
            self.report_unexpected(assign, format!("expected `=`, found {description}"));
        }
        let value = self.parse_pipeline();
        let span = keyword.span.join(value.span);
        AliasStmt {
            name,
            name_span,
            value,
            span,
        }
    }

    fn parse_fn(&mut self) -> FnDecl {
        let keyword = self.bump(LexMode::Words);
        let (name, name_span) = self.expect_ident("a name for the function");
        let mut parameters = Vec::new();
        if self
            .expect(LexMode::Expr, TokenKind::LParen, "`(`")
            .is_some()
        {
            loop {
                self.skip_newlines(LexMode::ExprOperand);
                let token = self.peek(LexMode::Expr);
                match token.kind {
                    TokenKind::RParen => {
                        self.bump(LexMode::Expr);
                        break;
                    }
                    TokenKind::Eof | TokenKind::LBrace => {
                        self.report_unexpected(token, "expected `)` to close the parameter list");
                        break;
                    }
                    _ => {}
                }
                let before = self.pos;
                parameters.push(self.parse_param());
                if self.eat(LexMode::Expr, TokenKind::Comma).is_none()
                    && !matches!(
                        self.peek(LexMode::Expr).kind,
                        TokenKind::RParen | TokenKind::Eof | TokenKind::LBrace
                    )
                {
                    let token = self.peek(LexMode::Expr);
                    let description = self.describe(token);
                    self.report_unexpected(
                        token,
                        format!("expected `,` or `)` in the parameter list, found {description}"),
                    );
                    self.bump(LexMode::Expr);
                }
                if self.pos == before {
                    self.bump(LexMode::Expr);
                }
            }
        }
        let return_type = if self.eat(LexMode::Expr, TokenKind::ThinArrow).is_some() {
            Some(self.parse_type())
        } else {
            None
        };
        let body = self.parse_block_or_error();
        let span = keyword.span.join(body.span);
        FnDecl {
            name,
            name_span,
            parameters,
            return_type,
            body,
            span,
        }
    }

    fn parse_param(&mut self) -> Param {
        let (name, name_span) = self.expect_ident("a parameter name");
        let ty = if self.eat(LexMode::Expr, TokenKind::Colon).is_some() {
            Some(self.parse_type())
        } else {
            None
        };
        let default = if self.eat(LexMode::Expr, TokenKind::Eq).is_some() {
            Some(self.parse_expression())
        } else {
            None
        };
        let end = default
            .as_ref()
            .map_or_else(|| ty.as_ref().map_or(name_span, |ty| ty.span), Expr::span);
        Param {
            name,
            name_span,
            ty,
            default,
            span: name_span.join(end),
        }
    }

    fn parse_type(&mut self) -> TypeRef {
        let (name, span) = self.expect_ident("a type name");
        let mut arguments = Vec::new();
        let mut end = span;
        if self.eat(LexMode::Expr, TokenKind::Lt).is_some() {
            loop {
                let token = self.peek(LexMode::Expr);
                if matches!(token.kind, TokenKind::Gt | TokenKind::Eof) {
                    if let Some(close) = self.eat(LexMode::Expr, TokenKind::Gt) {
                        end = close.span;
                    } else {
                        self.report_unexpected(token, "expected `>` to close the type arguments");
                    }
                    break;
                }
                let before = self.pos;
                let argument = self.parse_type();
                end = argument.span;
                arguments.push(argument);
                if self.eat(LexMode::Expr, TokenKind::Comma).is_none()
                    && !matches!(
                        self.peek(LexMode::Expr).kind,
                        TokenKind::Gt | TokenKind::Eof
                    )
                {
                    let token = self.peek(LexMode::Expr);
                    let description = self.describe(token);
                    self.report_unexpected(
                        token,
                        format!("expected `,` or `>` in the type arguments, found {description}"),
                    );
                    self.bump(LexMode::Expr);
                }
                if self.pos == before {
                    self.bump(LexMode::Expr);
                }
            }
        }
        let optional = if let Some(mark) = self.eat(LexMode::Expr, TokenKind::Question) {
            end = mark.span;
            true
        } else {
            false
        };
        TypeRef {
            name,
            arguments,
            optional,
            span: span.join(end),
        }
    }

    fn parse_if(&mut self) -> IfStmt {
        let keyword = self.bump(LexMode::Words);
        let mut branches = Vec::new();
        let mut else_block = None;
        let mut end;
        loop {
            let condition = self.parse_condition();
            let block = self.parse_block_or_error();
            end = block.span;
            branches.push(IfBranch {
                span: condition.span().join(block.span),
                condition,
                block,
            });
            if !self.at_keyword(LexMode::Words, "else") {
                break;
            }
            self.bump(LexMode::Words);
            if self.at_keyword(LexMode::Words, "if") {
                self.bump(LexMode::Words);
                continue;
            }
            let block = self.parse_block_or_error();
            end = block.span;
            else_block = Some(block);
            break;
        }
        IfStmt {
            branches,
            else_block,
            span: keyword.span.join(end),
        }
    }

    fn parse_for(&mut self) -> ForStmt {
        let keyword = self.bump(LexMode::Words);
        let (binding, binding_span) = self.expect_ident("a name to bind each item to");
        if !self.at_keyword(LexMode::Expr, "in") {
            let token = self.peek(LexMode::Expr);
            let description = self.describe(token);
            self.report_unexpected(token, format!("expected `in`, found {description}"));
        } else {
            self.bump(LexMode::Expr);
        }
        let iterable = self.parse_condition();
        let body = self.parse_block_or_error();
        ForStmt {
            binding,
            binding_span,
            iterable,
            span: keyword.span.join(body.span),
            body,
        }
    }

    fn parse_while(&mut self) -> WhileStmt {
        let keyword = self.bump(LexMode::Words);
        let condition = self.parse_condition();
        let body = self.parse_block_or_error();
        WhileStmt {
            condition,
            span: keyword.span.join(body.span),
            body,
        }
    }

    fn parse_match(&mut self) -> MatchStmt {
        let keyword = self.bump(LexMode::Words);
        let subject = self.parse_condition();
        let mut arms = Vec::new();
        let mut end = subject.span();
        if let Some(open) = self.expect(LexMode::Expr, TokenKind::LBrace, "`{`") {
            loop {
                self.skip_separators();
                let token = self.peek(LexMode::ExprOperand);
                match token.kind {
                    TokenKind::RBrace => {
                        end = self.bump(LexMode::ExprOperand).span;
                        break;
                    }
                    TokenKind::Eof => {
                        self.report(Diagnostic::incomplete(
                            open.span,
                            "this `{` is never closed",
                        ));
                        end = token.span;
                        break;
                    }
                    _ => {}
                }
                let before = self.pos;
                arms.push(self.parse_match_arm());
                self.eat(LexMode::Expr, TokenKind::Comma);
                if self.pos == before {
                    self.bump(LexMode::Expr);
                }
            }
        }
        MatchStmt {
            subject,
            arms,
            span: keyword.span.join(end),
        }
    }

    fn parse_match_arm(&mut self) -> MatchArm {
        let pattern = self.parse_pattern();
        if self
            .expect(LexMode::Expr, TokenKind::FatArrow, "`=>`")
            .is_none()
        {
            let span = pattern.span();
            return MatchArm {
                pattern,
                body: MatchArmBody::Expr(Expr::Error(Span::at(span.end()))),
                span,
            };
        }
        let token = self.peek(LexMode::ExprOperand);
        let body = if token.kind == TokenKind::LBrace && !self.is_record_brace(token) {
            MatchArmBody::Block(self.parse_block())
        } else {
            MatchArmBody::Expr(self.parse_expression())
        };
        let end = match &body {
            MatchArmBody::Block(block) => block.span,
            MatchArmBody::Expr(expression) => expression.span(),
        };
        MatchArm {
            span: pattern.span().join(end),
            pattern,
            body,
        }
    }

    fn parse_pattern(&mut self) -> Pattern {
        let token = self.peek(LexMode::ExprOperand);
        match token.kind {
            TokenKind::Ident => {
                let text = token.text(self.source);
                match text {
                    "_" => {
                        self.bump(LexMode::ExprOperand);
                        Pattern::Wildcard(token.span)
                    }
                    "true" | "false" | "null" => Pattern::Literal(self.parse_expression()),
                    _ => {
                        self.bump(LexMode::ExprOperand);
                        Pattern::Binding {
                            name: text.to_owned(),
                            span: token.span,
                        }
                    }
                }
            }
            TokenKind::Int
            | TokenKind::Float
            | TokenKind::Unit
            | TokenKind::Str
            | TokenKind::RawStr
            | TokenKind::UnterminatedStr
            | TokenKind::UnterminatedRawStr
            | TokenKind::Regex
            | TokenKind::UnterminatedRegex
            | TokenKind::Minus => Pattern::Literal(self.parse_expression()),
            _ => {
                let description = self.describe(token);
                self.report_unexpected(token, format!("expected a pattern, found {description}"));
                Pattern::Error(Span::at(token.span.start()))
            }
        }
    }

    fn parse_try(&mut self) -> TryStmt {
        let keyword = self.bump(LexMode::Words);
        let body = self.parse_block_or_error();
        let mut end = body.span;
        let catch = if self.at_keyword(LexMode::Words, "catch") {
            let catch_keyword = self.bump(LexMode::Words);
            let mut binding = None;
            let mut binding_span = None;
            if self.peek(LexMode::Expr).kind == TokenKind::Ident {
                let token = self.bump(LexMode::Expr);
                binding = Some(token.text(self.source).to_owned());
                binding_span = Some(token.span);
            }
            let handler = self.parse_block_or_error();
            end = handler.span;
            Some(CatchClause {
                binding,
                binding_span,
                span: catch_keyword.span.join(handler.span),
                body: handler,
            })
        } else {
            None
        };
        TryStmt {
            body,
            catch,
            span: keyword.span.join(end),
        }
    }

    fn parse_return(&mut self) -> ReturnStmt {
        let keyword = self.bump(LexMode::Words);
        let token = self.peek(LexMode::ExprOperand);
        let value = if matches!(
            token.kind,
            TokenKind::Eof
                | TokenKind::Newline
                | TokenKind::Semi
                | TokenKind::RBrace
                | TokenKind::RParen
                | TokenKind::RBracket
                | TokenKind::Comma
                | TokenKind::Pipe
        ) {
            None
        } else {
            Some(self.parse_expression())
        };
        let span = value
            .as_ref()
            .map_or(keyword.span, |value| keyword.span.join(value.span()));
        ReturnStmt { value, span }
    }

    fn parse_use(&mut self) -> UseStmt {
        let keyword = self.bump(LexMode::Words);
        let token = self.peek(LexMode::Words);
        if token.kind == TokenKind::Word {
            self.bump(LexMode::Words);
            let module = self.qualified_name(token);
            return UseStmt {
                span: keyword.span.join(module.span),
                module,
            };
        }
        let description = self.describe(token);
        self.report_unexpected(
            token,
            format!("expected a module name, found {description}"),
        );
        UseStmt {
            module: QualifiedName {
                namespace: None,
                name: String::new(),
                span: Span::at(token.span.start()),
            },
            span: keyword.span,
        }
    }

    fn expect_ident(&mut self, what: &str) -> (String, Span) {
        let token = self.peek(LexMode::Expr);
        if token.kind == TokenKind::Ident {
            self.bump(LexMode::Expr);
            return (token.text(self.source).to_owned(), token.span);
        }
        let description = self.describe(token);
        self.report_unexpected(token, format!("expected {what}, found {description}"));
        (String::new(), Span::at(token.span.start()))
    }

    fn expect(&mut self, mode: LexMode, kind: TokenKind, what: &str) -> Option<Token> {
        let token = self.peek(mode);
        if token.kind == kind {
            return Some(self.bump(mode));
        }
        let description = self.describe(token);
        self.report_unexpected(token, format!("expected {what}, found {description}"));
        None
    }

    fn skip_newlines(&mut self, mode: LexMode) {
        while self.peek(mode).kind == TokenKind::Newline {
            self.bump(mode);
        }
    }

    /// Parses the expression that guards a block, where a `{` always opens the block.
    fn parse_condition(&mut self) -> Expr {
        let saved = self.no_brace;
        self.no_brace = true;
        let expression = self.parse_expression();
        self.no_brace = saved;
        expression
    }

    fn parse_block_or_error(&mut self) -> Block {
        let token = self.peek(LexMode::Words);
        if token.kind == TokenKind::LBrace {
            return self.parse_block();
        }
        let description = self.describe(token);
        self.report_unexpected(token, format!("expected a block, found {description}"));
        Block {
            statements: Vec::new(),
            span: Span::at(token.span.start()),
        }
    }

    /// Parses `{ statements }`, with the `{` still unconsumed.
    ///
    /// Statement nesting is depth-limited for the same reason expression nesting is: a block
    /// contains statements, a statement contains a block, and `if true { if true { … } }` nested
    /// a couple of thousand deep would otherwise overflow the stack and abort the process. This
    /// parser runs on every keystroke in the editor, so that is one pasted line away from killing
    /// a login shell.
    fn parse_block(&mut self) -> Block {
        if self.depth >= MAX_DEPTH {
            let open = self.bump(LexMode::Words);
            self.report(Diagnostic::syntax(
                open.span,
                "this block nests more deeply than the parser will follow",
            ));
            // Skip to the matching close without descending, so the rest of the line still
            // parses and the tree is still returned.
            let end = self.skip_balanced_block();
            return Block {
                statements: Vec::new(),
                span: open.span.join(end),
            };
        }
        self.depth += 1;
        let block = self.parse_block_inner();
        self.depth -= 1;
        block
    }

    /// Consumes tokens up to the `}` that closes the block whose `{` was just taken.
    ///
    /// Counting braces rather than recursing is the point: the input that gets here is the input
    /// that was too deep to recurse through.
    fn skip_balanced_block(&mut self) -> Span {
        let mut open_braces = 1usize;
        loop {
            let token = self.peek(LexMode::Words);
            match token.kind {
                TokenKind::Eof => return token.span,
                TokenKind::LBrace => open_braces += 1,
                TokenKind::RBrace => {
                    open_braces -= 1;
                    if open_braces == 0 {
                        return self.bump(LexMode::Words).span;
                    }
                }
                _ => {}
            }
            self.bump(LexMode::Words);
        }
    }
